service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  ports:
  - port: 8088
    targetPort: 8088
    nodePort: 30007
  selector:
    app: myapp
  type: NodePort
