service_mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
  spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: mysql
  spec:
    ports:
    - name: mysql
      port: 3306
    selector:
      app: mysql
