ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "*"
    http:
      paths:
      - backend:
          service:
            name: myapp-service
            port:
              number: 8088
        path: /
